Fixed some of the create cause input layout issues, removed the hardcoded inputs and added a function to create them instead. Hooked each one to the state to be functional.

--- a/src/components/MainImage/MainImage.css
+++ b/src/components/MainImage/MainImage.css
@@ -2,13 +2,13 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  border: 4px solid var(--bright-green);
+  border: 2px solid var(--bright-green);
   box-shadow: 0.2rem 0.3rem 2.5rem rgba(0,0,0,0.5);
   height: 6.5rem;
   margin: -20% auto 0;
   overflow: hidden;
   position: relative;
   text-align: center;
-  top: -1.2rem;
+  top: -1rem;
   width: 6.5rem;
 }
